@startuml diagrama
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodesep 200
skinparam ranksep 150

class Carta{
    - Texto : string
    + RealizarEfeito()
}

class Casa{
    # Nome: string
    - Posicao : int
    - Efeito : Efeito

    + RealizarEfeito()
}

enum Cor{
    AMARELO
    AZUL_CLARO
    AZUL_ESCURO
    LARANJA
    MARROM
    VERDE
    VERMELHO
    ROSA
}

interface Efeito <<interface>>{
    + RealizarEfeito()
}

class Jogador{
    - Saldo : int
    - Posicao: int
    - numeroPlayer: int {readonly}
    + EfeitoHabeasCorpus: EfeitoHabeasCorpus

    - JogarDado(): int
    - GanharDinheiroPorVolta(): void
    + Receber(int): void
    + Pagar(int): void
    + IniciarRodada() : void
    + Mover(int) : void
    + Teleportar(int) : void
}

enum Personagem{
    BARCO
    CACHORRO
    CARRO
    GATO
}

class Propriedade{
    - Preco: int
    - Aluguel: int
    - AluguelDobrado : bool [= false]

    + RealizarEfeitos()
    + ChecarProprietario(Jogador) : bool
    + RemoverProprietario(Jogador) : void
    + Comprar(Jogador): void
    + CobrarAluguel(): void
}

class Tabuleiro<<singleton>>{
    <u>- Instance : Tabuleiro</u>
    - jogadorDaVez : int [=0]
    - cartaDaVez : int
    - acabou : bool

    <u>+ GetInstance() : Tabuleiro</u>
    - EmbaralharCartas() : Cartas[Carta]
    + InicializarJogadores(): void
    + ProximoJogador() : void
    + JogadorAtual() : Jogador
    + PegarCarta() : Carta
    + MaiorSaldo() : int
    + AcharVencedor(Vencedores[Jogador]) : Jogador
    + AcabarJogo() : void
}

entity InterfaceUsuario <<interface>>{
    + MudarVezPersonagem(personagem : Personagem, vez : bool)
    + AtualizarSaldo(personagem: Personagem, saldo : int)
    + PerguntarCompraPropriedade(propriedade : Propriedade)
    + AdicionarPropriedade (personagem: Personagem, propriedade : Propriedade)
    + RemoverPropriedade (personagem: Personagem, propriedade : Propriedade)
    + EscolherPropriedade (Propriedades : Propriedade[]) : Propriedade
    + AnimarDado(resultado : int)
    + EscolherMoverOuComprar () : bool
    + MoverPersonagem(personagem : Personagem, posicaoFinal : bool)
    + TeleportarPersonagem(personagem : Personagem, posicaoFinal : bool)
    + EscolherPassos() : EfeitoPassos
    + GetNumeroPlayer (personagem : Personagem) : int
    + MostrarCarta (carta : Carta)
    + MostrarMensagem (message : string)
    + AcabarJogo(vencedor : Personagem)

}

entity EfeitoComprarCarta{
    + RealizarEfeito() : void
    - ComprarCarta() : void 
}

entity EfeitoEscolherPassos{
    + RealizarEfeito() : void

    - EscolherPassos() : void
}

entity EfeitoEscolherPropriedade{
    - Cor1, Cor2 : Cor

    + RealizarEfeito() : void
    - EscolherPropriedadeCor() : Propriedade
}

entity EfeitoEspecialPersonagem{
    - EfeitoComprarCarta : EfeitoComprarCarta
    - Personagem : Personagem

    + RealizarEfeito() : void
    - EscolherPropriedade() : Propriedade
    - EntregarCartaAoPersonagem(Efeito) : void
}

entity EfeitoGO{
    - EfeitoTeleporte : EfeitoTeleporte
    - EfeitoTransacao : EfeitoTransacao 

    + RealizarEfeito() : void
    - SairDaPrisao() : void
}

entity EfeitoHabeasCorpus{
    + RealizarEfeito() : void
    - SairDaPrisao() : void
}

entity EfeitoMoverOuComprar{
    - EfeitoPassos : EfeitoPassos
    - EfeitoComprarCarta : EfeitoComprarCarta

    + RealizarEfeito() : void
    - EscolherMoverOuComprar() : Efeito
}

entity EfeitoPassos{
    - Passos : int

    + RealizarEfeito() : void
    - AndarJogador() : void
}

entity EfeitoPrisao{
    + RealizarEfeito() : void
    - VerificarHabeasCorpus() : bool
    - CobrarMulta() : void
}

entity EfeitoPropriedadeGratis{
    - IndicePropriedade : int

    + RealizarEfeito() : void
    - PegarOuPagar() : Propriedade
}

entity EfeitoTeleporte{
    - Destino : int

    + RealizarEfeito() : void
    - TeleportarJogador() : void
}

entity EfeitoTransacao{
    - Transacao : int

    + RealizarEfeito() : void
    - AplicarTransacao() : void
}

entity EfeitoVaParaPrisao{
    - MotivosParaPrisao : List<string>
    - EfeitoTeleporte : EfeitoTeleporte
    - EfeitoPrisao : EfeitoPrisao
    
    + RealizarEfeito() : void
}

Carta o- "*...*" Efeito : - Efeitos

Casa --> Efeito : - Efeito

Jogador  o-- "1...*" Propriedade : + Propriedades[]
Jogador --> Personagem : - Personagem {readonly}
Jogador --> Efeito : + EfeitoInicial

Propriedade --> Cor : + Cor
Propriedade --> "0..1" Jogador: - Proprietario
Propriedade --|> Casa

Tabuleiro *- "1...*" Jogador : + Jogadores[]
Tabuleiro *- "1...*" Casa : + Casas[]
Tabuleiro *- "1...*" Carta : + Cartas[]
Tabuleiro --> InterfaceUsuario : + InterfaceUsuario

EfeitoComprarCarta ..|> Efeito
EfeitoEscolherPassos ..|> Efeito
EfeitoEscolherPropriedade ..|> Efeito
EfeitoEspecialPersonagem ..|> Efeito
EfeitoGO ..|> Efeito
EfeitoHabeasCorpus ..|> Efeito
EfeitoMoverOuComprar ..|> Efeito
EfeitoPassos ..|> Efeito
EfeitoPropriedadeGratis ..|> Efeito
EfeitoPrisao ..|> Efeito
EfeitoTeleporte ..|> Efeito
EfeitoTransacao ..|> Efeito
EfeitoVaParaPrisao ..|> Efeito

@enduml